--- a/notebooks/modelling.qmd
+++ b/notebooks/modelling.qmd
@@ -1,5 +1,12 @@
-Assuming all the data is loaded.
+```{r}
+library("here")
+library("dplyr")
+library("arrow")
+```
 
+```{r}
+model_data <- read_feather(here("data", "processed", "model_data.arrow"))
+```
 First question: What do we find without thinking about hispanicity, following Bertrand. (i)
 
 ```{r}
